--- a/menu/luckybackup-kde-su.desktop
+++ b/menu/luckybackup-kde-su.desktop
@@ -3,7 +3,7 @@ Name=luckyBackup (super user)
 Name[en]=luckyBackup (super user)
 Name[en_US]=luckyBackup (super user)
 Name[ara]=luckyBackup (الرووت)
-Name[bh]=luckyBackup (super user)
+Name[ca]=luckyBackup (superusuari)
 Name[cs]=luckyBackup (Super uživatel)
 Name[de]=luckyBackup (super user)
 Name[el]=luckyBackup (υπερχρήστης)
@@ -11,17 +11,17 @@ Name[es]=luckyBackup (super user)
 Name[fr]=luckyBackup (super user)
 Name[it]=luckyBackup (super user)
 Name[nl]=luckyBackup (systeembeheerder)
-Name[pt]=luckyBackup (super user)
-Name[ro]=luckyBackup (super user)
+Name[pt_BR]=luckyBackup (super usuário)
+Name[ro]=luckyBackup (administrator)
 Name[ru]=luckyBackup (super user)
 Name[sl]=luckyBackup (super uporabnik)
-Name[sv]=luckyBackup (super user)
+Name[sv]=luckyBackup (superanvändare)
 Name[tr]=luckyBackup (süper kullanıcı)
 GenericName=Backup & Sync tool
 GenericName[en]=Backup & Sync tool
 GenericName[en_US]=Backup & Sync tool
 GenericName[ara]=أداة حفظ ومزامنة
-GenericName[bh]=Backup & Sync tool
+GenericName[ca]=Eina de còpia de seguretat i sincronització
 GenericName[cs]=Zálohovací a seřizovací nástroj
 GenericName[de]=Backup & Sync tool
 GenericName[el]=Εργαλείο αντιγράφων ασφαλείας & συγχρονισμού
@@ -29,17 +29,17 @@ GenericName[es]=Herramienta de copias de seguridad y sincronizado
 GenericName[fr]=Backup & Sync tool
 GenericName[it]=Backup & Sync tool
 GenericName[nl]=Backup & Synchronisatie gereedschap
-GenericName[pt]=Backup & Sync tool
-GenericName[ro]=Backup & Sync tool
+GenericName[pt_BR]=Ferramente de Backup & Sincronização
+GenericName[ro]=Aplicatie de arhivare si sincronizare
 GenericName[ru]=Backup & Sync tool
 GenericName[sl]=Orodje za varnostne kopije in usklajevanje
-GenericName[sv]=Backup & Sync tool
+GenericName[sv]=Verktyg för säkerhetskopiering och synkronisering
 GenericName[tr]=Yedekleme & Şipşaklama aracı
 Comment=Backup & sync your data with the power of rsync
 Comment[en]=Backup & sync your data with the power of rsync
 Comment[en_US]=Backup & sync your data with the power of rsync
 Comment[ara]=احفظ وزامن بياناتك مستخدماً قوة rsync
-Comment[bh]=Backup & sync your data with the power of rsync
+Comment[ca]=Crear còpia de seguretat i sincronitzar dades amb el poder de rsync
 Comment[cs]=Zálohujte a seřizujte svá data pomocí síly nástroje rsync
 Comment[de]=Backup & sync your data with the power of rsync
 Comment[el]=Αντίγραφα ασφαλείας & συγχρονισμός δεδομένων με τη δύναμη του rsync
@@ -47,11 +47,11 @@ Comment[es]=Haz copias de seguridad y sincroniza tus archivos con el poder de rs
 Comment[fr]=Backup & sync your data with the power of rsync
 Comment[it]=Backup & sync your data with the power of rsync
 Comment[nl]=Backup & synchroniseer uw data met de kracht van rsync
-Comment[pt]=Backup & sync your data with the power of rsync
-Comment[ro]=Backup & sync your data with the power of rsync
+Comment[pt_BR]=Backup & sincronize seus dados com o poder do rsync
+Comment[ro]=Arhiveaza si sincronizeaza datele utilizand puterea utilitarului rsync
 Comment[ru]=Backup & sync your data with the power of rsync
 Comment[sl]=Ustvarjanje varnostnih kopij in usklajevanje z uporabo rsync
-Comment[sv]=Backup & sync your data with the power of rsync
+Comment[sv]=Säkerhetskopiera och synkronisera din data med hjälp av rsync
 Comment[tr]=rsync gücüyle verinizi yedekleyin & şipşaklayın
 Exec=/usr/bin/luckybackup
 Terminal=false
