--- a/menu/luckybackup-kde-su.desktop
+++ b/menu/luckybackup-kde-su.desktop
@@ -9,7 +9,7 @@ Name[de]=luckyBackup (super user)
 Name[el]=luckyBackup (υπερχρήστης)
 Name[es]=luckyBackup (super user)
 Name[fr]=luckyBackup (super user)
-Name[it]=luckyBackup (super user)
+Name[it]=luckyBackup (super utente)
 Name[nl]=luckyBackup (systeembeheerder)
 Name[pt_BR]=luckyBackup (super usuário)
 Name[ro]=luckyBackup (administrator)
@@ -23,11 +23,11 @@ GenericName[en_US]=Backup & Sync tool
 GenericName[ara]=أداة حفظ ومزامنة
 GenericName[ca]=Eina de còpia de seguretat i sincronització
 GenericName[cs]=Zálohovací a seřizovací nástroj
-GenericName[de]=Backup & Sync tool
+GenericName[de]=Sicherungs & Synchronisations Werkzeug
 GenericName[el]=Εργαλείο αντιγράφων ασφαλείας & συγχρονισμού
 GenericName[es]=Herramienta de copias de seguridad y sincronizado
 GenericName[fr]=Backup & Sync tool
-GenericName[it]=Backup & Sync tool
+GenericName[it]=Strumento di Backup & Sincronizzazione
 GenericName[nl]=Backup & Synchronisatie gereedschap
 GenericName[pt_BR]=Ferramente de Backup & Sincronização
 GenericName[ro]=Aplicatie de arhivare si sincronizare
@@ -41,11 +41,11 @@ Comment[en_US]=Backup & sync your data with the power of rsync
 Comment[ara]=احفظ وزامن بياناتك مستخدماً قوة rsync
 Comment[ca]=Crear còpia de seguretat i sincronitzar dades amb el poder de rsync
 Comment[cs]=Zálohujte a seřizujte svá data pomocí síly nástroje rsync
-Comment[de]=Backup & sync your data with the power of rsync
+Comment[de]=Sichere & Synchronisiere mit der Kraft von rsync
 Comment[el]=Αντίγραφα ασφαλείας & συγχρονισμός δεδομένων με τη δύναμη του rsync
 Comment[es]=Haz copias de seguridad y sincroniza tus archivos con el poder de rsync
 Comment[fr]=Backup & sync your data with the power of rsync
-Comment[it]=Backup & sync your data with the power of rsync
+Comment[it]=Effettua il backup e sincronizza i tuoi dati col potere di rsync
 Comment[nl]=Backup & synchroniseer uw data met de kracht van rsync
 Comment[pt_BR]=Backup & sincronize seus dados com o poder do rsync
 Comment[ro]=Arhiveaza si sincronizeaza datele utilizand puterea utilitarului rsync
