--- a/menu/luckybackup.desktop
+++ b/menu/luckybackup.desktop
@@ -32,7 +32,7 @@ GenericName[nl]=Backup- & sync-toepassing
 GenericName[pt_BR]=Ferramente de Backup & Sincronização
 GenericName[ro]=Aplicatie de arhivare si sincronizare
 GenericName[ru]=Backup & Sync tool
-GenericName[sl]=Orodje za varnostne kopije in usklajevanje
+GenericName[sl]=Orodje za usklajevanje in varnostne kopije
 GenericName[sv]=Verktyg för säkerhetskopiering och synkronisering
 GenericName[tr]=Yedekleme & Şipşaklama aracı
 Comment=Backup & sync your data with the power of rsync
