--- a/menu/luckybackup-kde-su.desktop
+++ b/menu/luckybackup-kde-su.desktop
@@ -14,7 +14,7 @@ Name[nl]=luckyBackup (systeembeheerder)
 Name[pt_BR]=luckyBackup (super usuário)
 Name[ro]=luckyBackup (administrator)
 Name[ru]=luckyBackup (super user)
-Name[sl]=luckyBackup (super uporabnik)
+Name[sl]=luckyBackup (skrbniški način)
 Name[sv]=luckyBackup (superanvändare)
 Name[tr]=luckyBackup (süper kullanıcı)
 GenericName=Backup & Sync tool
@@ -32,7 +32,7 @@ GenericName[nl]=Backup- & sync-toepassing
 GenericName[pt_BR]=Ferramente de Backup & Sincronização
 GenericName[ro]=Aplicatie de arhivare si sincronizare
 GenericName[ru]=Backup & Sync tool
-GenericName[sl]=Orodje za varnostne kopije in usklajevanje
+GenericName[sl]=Orodje za usklajevanje in varnostne kopije
 GenericName[sv]=Verktyg för säkerhetskopiering och synkronisering
 GenericName[tr]=Yedekleme & Şipşaklama aracı
 Comment=Backup & sync your data with the power of rsync
