--- a/menu/luckybackup-gnome-su.desktop
+++ b/menu/luckybackup-gnome-su.desktop
@@ -17,6 +17,8 @@ Name[ru]=luckyBackup (super user)
 Name[sl]=luckyBackup (skrbniški način)
 Name[sv]=luckyBackup (superanvändare)
 Name[tr]=luckyBackup (süper kullanıcı)
+Name[ja_JP]=luckyBackup (スーパーユーザー)
+Name[zh_TW]=luckyBackup (超級使用者)
 GenericName=Backup & Sync tool
 GenericName[en]=Backup & Sync tool
 GenericName[en_US]=Backup & Sync tool
@@ -35,6 +37,7 @@ GenericName[ru]=Backup & Sync tool
 GenericName[sl]=Orodje za usklajevanje in varnostne kopije
 GenericName[sv]=Verktyg för säkerhetskopiering och synkronisering
 GenericName[tr]=Yedekleme & Şipşaklama aracı
+GenericName[zh_TW]=備份與同步工具
 Comment=Backup & sync your data with the power of rsync
 Comment[en]=Backup & sync your data with the power of rsync
 Comment[en_US]=Backup & sync your data with the power of rsync
@@ -53,6 +56,7 @@ Comment[ru]=Backup & sync your data with the power of rsync
 Comment[sl]=Ustvarjanje varnostnih kopij in usklajevanje z uporabo rsync
 Comment[sv]=Säkerhetskopiera och synkronisera din data med hjälp av rsync
 Comment[tr]=rsync gücüyle verinizi yedekleyin & şipşaklayın
+Comment[zh_TW]=借助 rsync 之力備份並同步您的資料
 Exec=su-to-root -X -c /usr/bin/luckybackup
 Terminal=false
 Type=Application
