--- a/menu/luckybackup.desktop
+++ b/menu/luckybackup.desktop
@@ -35,6 +35,7 @@ GenericName[ru]=Backup & Sync tool
 GenericName[sl]=Orodje za usklajevanje in varnostne kopije
 GenericName[sv]=Verktyg för säkerhetskopiering och synkronisering
 GenericName[tr]=Yedekleme & Şipşaklama aracı
+GenericName[zh_TW]=備份與同步工具
 Comment=Backup & sync your data with the power of rsync
 Comment[en]=Backup & sync your data with the power of rsync
 Comment[en_US]=Backup & sync your data with the power of rsync
@@ -53,6 +54,7 @@ Comment[ru]=Backup & sync your data with the power of rsync
 Comment[sl]=Ustvarjanje varnostnih kopij in usklajevanje z uporabo rsync
 Comment[sv]=Säkerhetskopiera och synkronisera din data med hjälp av rsync
 Comment[tr]=rsync gücüyle verinizi yedekleyin & şipşaklayın
+Comment[zh_TW]=借助 rsync 之力備份並同步您的資料
 Exec=/usr/bin/luckybackup
 Terminal=false
 Type=Application
