--- a/menu/luckybackup-kde-su.desktop
+++ b/menu/luckybackup-kde-su.desktop
@@ -11,7 +11,7 @@ Name[cs]=luckyBackup (Super uživatel)
 Name[nl]=luckyBackup (systeembeheerder)
 Name[et]=luckyBackup (super user)
 Name[fr]=luckyBackup (super user)
-Name[gl]=luckyBackup (super user)
+Name[gl]=luckyBackup (superusuario)
 Name[de]=luckyBackup (super user)
 Name[el]=luckyBackup (υπερχρήστης)
 Name[it]=luckyBackup (super utente)
@@ -19,6 +19,7 @@ Name[ja_JP]=luckyBackup (スーパーユーザー)
 Name[no]=luckyBackup (super user)
 Name[pl]=luckyBackup (super user)
 Name[pt_BR]=luckyBackup (super usuário)
+Name[pt_PT]=luckyBackup (super utilizador)
 Name[ro]=luckyBackup (administrator)
 Name[ru]=luckyBackup (суперпользователь)
 Name[sk]=luckyBackup (super user)
@@ -39,7 +40,7 @@ GenericName[cs]=Zálohovací a seřizovací nástroj
 GenericName[nl]=Backup- & sync-toepassing
 GenericName[et]=Backup & Sync tool
 GenericName[fr]=Outil de Sauvegarde & de Synchronisation
-GenericName[gl]=Backup & Sync tool
+GenericName[gl]=Ferramenta de copias de seguranza e sincronización
 GenericName[de]=Sicherungs & Synchronisations Werkzeug
 GenericName[el]=Εργαλείο αντιγράφων ασφαλείας & συγχρονισμού
 GenericName[it]=Strumento di Backup & Sincronizzazione
@@ -47,7 +48,8 @@ GenericName[ja_JP]=Backup & Sync tool
 GenericName[no]=Backup & Sync tool
 GenericName[pl]=Narzędzie do kopii zapasowych i synchronizacji
 GenericName[pt_BR]=Ferramente de Backup & Sincronização
-GenericName[ro]=Aplicatie de arhivare si sincronizare
+GenericName[pt_PT]=Ferramenta de Backup & Sincronização
+GenericName[ro]=Unealtă pentru backup & sincronizare
 GenericName[ru]=Резервное копирование и синхронизация
 GenericName[sk]=Backup & Sync tool
 GenericName[sl]=Orodje za usklajevanje in varnostne kopije
@@ -67,7 +69,7 @@ Comment[cs]=Zálohujte a seřizujte svá data pomocí síly nástroje rsync
 Comment[nl]=Backup & sync je bestanden met de kracht van rsync
 Comment[et]=Backup & sync your data with the power of rsync
 Comment[fr]=Sauvegarde et Synchronise vos données avec la puissance de rsync
-Comment[gl]=Backup & sync your data with the power of rsync
+Comment[gl]=Faga copias e sincronice os seus datos co poder de rsync
 Comment[de]=Sichere & Synchronisiere mit der Kraft von rsync
 Comment[el]=Αντίγραφα ασφαλείας & συγχρονισμός δεδομένων με τη δύναμη του rsync
 Comment[it]=Effettua il backup e sincronizza i tuoi dati col potere di rsync
@@ -75,7 +77,8 @@ Comment[ja_JP]=Backup & sync your data with the power of rsync
 Comment[no]=Backup & sync your data with the power of rsync
 Comment[pl]=Kopie zapasowe i synchronizacja danych z siłą rsync
 Comment[pt_BR]=Backup & sincronize seus dados com o poder do rsync
-Comment[ro]=Arhiveaza si sincronizeaza datele utilizand puterea utilitarului rsync
+Comment[pt_PT]=Backup e sincronização dos seus dados com o poder do rsync
+Comment[ro]=Faceți copii de siguranță & sincronizați datele cu puterea aplicației rsync
 Comment[ru]=Резервное копирование и синхронизация с помощью rsync
 Comment[sk]=Backup & sync your data with the power of rsync
 Comment[sl]=Ustvarjanje varnostnih kopij in usklajevanje z uporabo rsync
@@ -92,3 +95,4 @@ Categories=KDE;Qt;System;
 OnlyShowIn=KDE;
 X-KDE-SubstituteUID=true
 X-KDE-Username=root
+Keywords=rsync;backup;restore;data;synchronization;safety;
