--- a/menu/luckybackup.desktop
+++ b/menu/luckybackup.desktop
@@ -19,6 +19,7 @@ Name[ja_JP]=luckyBackup
 Name[no]=luckyBackup
 Name[pl]=luckyBackup
 Name[pt_BR]=luckyBackup
+Name[pt_PT]=luckyBackup
 Name[ro]=luckyBackup
 Name[ru]=luckyBackup
 Name[sk]=luckyBackup
@@ -39,7 +40,7 @@ GenericName[cs]=Zálohovací a seřizovací nástroj
 GenericName[nl]=Backup- & sync-toepassing
 GenericName[et]=Backup & Sync tool
 GenericName[fr]=Outil de Sauvegarde & de Synchronisation
-GenericName[gl]=Backup & Sync tool
+GenericName[gl]=Ferramenta de copias de seguranza e sincronización
 GenericName[de]=Sicherungs & Synchronisations Werkzeug
 GenericName[el]=Εργαλείο αντιγράφων ασφαλείας & συγχρονισμού
 GenericName[it]=Strumento di Backup & Sincronizzazione
@@ -47,7 +48,8 @@ GenericName[ja_JP]=Backup & Sync tool
 GenericName[no]=Backup & Sync tool
 GenericName[pl]=Narzędzie do kopii zapasowych i synchronizacji
 GenericName[pt_BR]=Ferramente de Backup & Sincronização
-GenericName[ro]=Aplicatie de arhivare si sincronizare
+GenericName[pt_PT]=Ferramenta de Backup & Sincronização
+GenericName[ro]=Unealtă pentru backup & sincronizare
 GenericName[ru]=Резервное копирование и синхронизация
 GenericName[sk]=Backup & Sync tool
 GenericName[sl]=Orodje za usklajevanje in varnostne kopije
@@ -67,7 +69,7 @@ Comment[cs]=Zálohujte a seřizujte svá data pomocí síly nástroje rsync
 Comment[nl]=Backup & sync je bestanden met de kracht van rsync
 Comment[et]=Backup & sync your data with the power of rsync
 Comment[fr]=Sauvegarde et Synchronise vos données avec la puissance de rsync
-Comment[gl]=Backup & sync your data with the power of rsync
+Comment[gl]=Faga copias e sincronice os seus datos co poder de rsync
 Comment[de]=Sichere & Synchronisiere mit der Kraft von rsync
 Comment[el]=Αντίγραφα ασφαλείας & συγχρονισμός δεδομένων με τη δύναμη του rsync
 Comment[it]=Effettua il backup e sincronizza i tuoi dati col potere di rsync
@@ -75,7 +77,8 @@ Comment[ja_JP]=Backup & sync your data with the power of rsync
 Comment[no]=Backup & sync your data with the power of rsync
 Comment[pl]=Kopie zapasowe i synchronizacja danych z siłą rsync
 Comment[pt_BR]=Backup & sincronize seus dados com o poder do rsync
-Comment[ro]=Arhiveaza si sincronizeaza datele utilizand puterea utilitarului rsync
+Comment[pt_PT]=Backup e sincronização dos seus dados com o poder do rsync
+Comment[ro]=Faceți copii de siguranță & sincronizați datele cu puterea aplicației rsync
 Comment[ru]=Резервное копирование и синхронизация с помощью rsync
 Comment[sk]=Backup & sync your data with the power of rsync
 Comment[sl]=Ustvarjanje varnostnih kopij in usklajevanje z uporabo rsync
@@ -89,3 +92,4 @@ Type=Application
 Icon=/usr/share/pixmaps/luckybackup.png
 StartupNotify=true
 Categories=KDE;Qt;Utility;
+Keywords=rsync;backup;restore;data;synchronization;safety;
