--- a/menu/luckybackup.desktop
+++ b/menu/luckybackup.desktop
@@ -9,6 +9,7 @@ Name[ca]=luckyBackup
 Name[zh_TW]=luckyBackup
 Name[cs]=luckyBackup
 Name[nl]=luckyBackup
+Name[eo]=luckyBackup
 Name[et]=luckyBackup
 Name[fr]=luckyBackup
 Name[gl]=luckyBackup
@@ -38,6 +39,7 @@ GenericName[ca]=Eina de còpia de seguretat i sincronització
 GenericName[zh_TW]=備份與同步工具
 GenericName[cs]=Zálohovací a seřizovací nástroj
 GenericName[nl]=Backup- & sync-toepassing
+GenericName[eo]=Savkopia & Sinkroniga ilo
 GenericName[et]=Backup & Sync tool
 GenericName[fr]=Outil de Sauvegarde & de Synchronisation
 GenericName[gl]=Ferramenta de copias de seguranza e sincronización
@@ -67,6 +69,7 @@ Comment[ca]=Crear còpia de seguretat i sincronitzar dades amb el poder de rsync
 Comment[zh_TW]=借助 rsync 之力備份並同步您的資料
 Comment[cs]=Zálohujte a seřizujte svá data pomocí síly nástroje rsync
 Comment[nl]=Backup & sync je bestanden met de kracht van rsync
+Comment[eo]=Savkopiu & sinkronigu viajn datumojn per la potenco de rsync
 Comment[et]=Backup & sync your data with the power of rsync
 Comment[fr]=Sauvegarde et Synchronise vos données avec la puissance de rsync
 Comment[gl]=Faga copias e sincronice os seus datos co poder de rsync
