Official release of luckybackup v.0.5.0

--- a/menu/luckybackup-su.desktop
+++ b/menu/luckybackup-su.desktop
@@ -89,11 +89,10 @@ Comment[es]=Respalda y sincroniza tus datos con el poder de rsync
 Comment[sv]=Säkerhetskopiera och synkronisera din data med hjälp av rsync
 Comment[tr]=rsync gücüyle verinizi yedekleyin & şipşaklayın
 Comment[vi]=Backup & sync your data with the power of rsync
-Exec=su-to-root -X -c /usr/bin/luckybackup
+Exec=/usr/bin/luckybackup-pkexec
 Terminal=false
 Type=Application
 Icon=/usr/share/pixmaps/luckybackup.png
 StartupNotify=true
 Categories=KDE;Qt;System;
-NotShowIn=KDE;
 Keywords=rsync;backup;restore;data;synchronization;safety;
